# comic_creator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  log.hpp  main.cpp
